Update SQLController.java